# playoff-diagrams

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  apply-after.json  apply-before.json  index.html  mkdocs.yml  pyproject.toml  schema.json  search.html  sitemap.xml
.github/workflows/: ci.yml
docs/: format.md  index.md
examples/: facup-drawn.json  facup-pending-draw.json  gallery.html  gallery.py  knockout-8.json  libertadores-2026.json  libertadores_host.py
format/: index.html
search/: search_index.json
spec/: format.md  schema.json
src/matamata/: __init__.py  __main__.py  diagram.py  layout.py  model.py  parse.py  render.py  render_html.py
src/playoff_diagrams/: __init__.py  __main__.py  diagram.py  layout.py  model.py  parse.py  render.py
tests/: test_apply.py  test_model.py  test_render.py
tests/golden/: facup-drawn.html  facup-pending-draw.html  knockout-8.html  libertadores-2026.html
