[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playoff-diagrams"
version = "0.0.1"
description = "Render a football playoff bracket as an SVG from a JSON source document"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "jsonschema"]

[project.scripts]
playoff-diagrams = "playoff_diagrams.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/playoff_diagrams"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
