[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matamata"
version = "0.0.2"
description = "Model tournament knockout stages in JSON format and render the schedule in SVG or html table format"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "jsonschema", "mkdocs"]
lint = ["black", "isort", "mypy", "pylint", "types-jsonschema"]

[project.scripts]
matamata = "matamata.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/matamata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
